--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,53 @@
-<form [formGroup]="form" (ngSubmit)="submit()">
+<!-- <form [formGroup]="form" (ngSubmit)="submit()">
   <input type="email" formControlName="email" />
   <button type="submit">Submit</button>
-</form>
+</form> -->
+
+<div class="bg-white py-16 sm:py-24">
+  <div class="relative sm:py-16">
+    <div
+      class="mx-auto max-w-md px-4 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8"
+    >
+      <div
+        class="relative rounded-2xl px-6 py-10 bg-indigo-600 overflow-hidden shadow-xl sm:px-12 sm:py-20"
+      >
+        <div class="relative">
+          <div class="sm:text-center">
+            <h2
+              class="text-3xl font-extrabold text-white tracking-tight sm:text-4xl"
+            >
+              Get notified when we&rsquo;re launching.
+            </h2>
+            <p class="mt-6 mx-auto max-w-2xl text-lg text-indigo-200">
+              Subscribe to our prelaunch list and be the first to join our
+              upcoming app!
+            </p>
+          </div>
+          <form
+            [formGroup]="form"
+            (ngSubmit)="submit()"
+            class="mt-12 sm:mx-auto sm:max-w-lg sm:flex"
+          >
+            <div class="min-w-0 flex-1">
+              <label for="cta-email" class="sr-only">Email address</label>
+              <input
+                type="email"
+                formControlName="email"
+                class="block w-full border border-transparent rounded-md px-5 py-3 text-base text-gray-900 placeholder-gray-500 shadow-sm focus:outline-none focus:border-transparent focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600"
+                placeholder="Enter your email"
+              />
+            </div>
+            <div class="mt-4 sm:mt-0 sm:ml-3">
+              <button
+                type="submit"
+                class="block w-full rounded-md border border-transparent px-5 py-3 bg-indigo-500 text-base font-medium text-white shadow hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600 sm:px-10"
+              >
+                Notify me
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
